Added class to the td

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <td><img class="plnt__img" src="https://nssdc.gsfc.nasa.gov/planetary/banner/moon.gif" alt="moon"></td>
         </tr>
         <tr>
-            <td class="">
+            <td class="heading">
                 Fact #1
                 <strong class="mass">
                     Mass (10<sup>24</sup>Kg)
@@ -46,7 +46,7 @@
             </td>
         </tr>
         <tr>
-            <td class="">
+            <td class="heading">
                 Fact #2
                 <strong class="diameter">
                     Diameter (km):
@@ -67,7 +67,7 @@
             </td>
         </tr>
         <tr>
-            <td class="">
+            <td class="heading">
                 Fact #3
                 <strong class="sun">
                     Distance from Sun (10 <sup>6</sup>km)
@@ -79,7 +79,7 @@
             <td class="txt">0.384<sup>*</sup></td>
         </tr>
         <tr>
-            <td class="">
+            <td class="heading">
                 Fact #4
                 <strong class="numMoon">
                     Number of Moons
@@ -99,7 +99,7 @@
             </td>
         </tr>
         <tr>
-            <td class="">
+            <td class="heading">
                 Fact #5
                 <strong class="orbit">
                     Orbital Period (Days)
@@ -119,7 +119,7 @@
             </td>
         </tr>
         <tr>
-            <td class="">
+            <td class="heading">
                 Fact #6
                 <strong class="lenDays">
                     Length of Days
@@ -139,7 +139,7 @@
             </td>
         </tr>
         <tr>
-            <td class="">
+            <td class="heading">
                 Fact #7
                 <strong class="ring">
                     Ring System
