Added classes and style

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <th>Planet 4 - Moon</th>
         </tr>
         <tr>
-            <td>Images of Planets</td>
+            <td class="heading">Images of Planets</td>
             <td><img class="plnt__img" src="https://nssdc.gsfc.nasa.gov/planetary/banner/mercury.gif" alt="mercury">
             </td>
             <td><img class="plnt__img" src="https://nssdc.gsfc.nasa.gov/planetary/banner/venus.gif" alt="venus"></td>
@@ -157,6 +157,13 @@
             <td class="txt">
                 No
             </td>
+        </tr>
+        <tr class="last">
+            <th></th>
+            <th>Planet 1 - Mercury</th>
+            <th>Planet 2 - Venus</th>
+            <th>Planet 3 - Earth</th>
+            <th>Planet 4 - Moon</th>
         </tr>
     </table>
 </body>
