--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <table id="planets">
         <tr>
             <th></th>
-            <th>Planet 1 - Mercury</th>
-            <th>Planet 2 - Venus</th>
-            <th>Planet 3 - Earth</th>
-            <th>Planet 4 - Moon</th>
+            <th class="title">Planet 1 - Mercury</th>
+            <th class="title">Planet 2 - Venus</th>
+            <th class="title">Planet 3 - Earth</th>
+            <th class="title">Planet 4 - Moon</th>
         </tr>
         <tr>
             <td class="heading">Images of Planets</td>
