fixed the class name for last tr

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 No
             </td>
         </tr>
-        <tr class="las">
+        <tr class="last">
             <th></th>
             <th>Planet 1 - Mercury</th>
             <th>Planet 2 - Venus</th>
