Added style to the .last tr

--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
         </tr>
         <tr class="last">
             <th></th>
-            <th>Planet 1 - Mercury</th>
-            <th>Planet 2 - Venus</th>
-            <th>Planet 3 - Earth</th>
-            <th>Planet 4 - Moon</th>
+            <th class="title">Planet 1 - Mercury</th>
+            <th class="title">Planet 2 - Venus</th>
+            <th class="title">Planet 3 - Earth</th>
+            <th class="title">Planet 4 - Moon</th>
         </tr>
     </table>
 </body>
