added style to lst tr

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             </td>
         </tr>
         <tr class="last">
-            <th></th>
+            <th class="title"></th>
             <th class="title">Planet 1 - Mercury</th>
             <th class="title">Planet 2 - Venus</th>
             <th class="title">Planet 3 - Earth</th>
